enforce-ciliumnetworkpolicy-annotations.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: enforce-ciliumnetworkpolicy-annotations
spec:
  validationFailureAction: Enforce
  background: false
  rules:
  - name: check-annotations
    match:
      resources:
        kinds:
        - CiliumNetworkPolicy
    validate:
      message: "Missing required annotation"
      pattern:
        metadata:
          annotations:
            purpose: "?*"
            owner: "?*"
