limit-ciliumnetworkpolicy-scope.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: limit-ciliumnetworkpolicy-scope
spec:
  validationFailureAction: enforce
  background: false
  rules:
  - name: limit-scope
    match:
      resources:
        kinds:
        - CiliumNetworkPolicy
    validate:
      message: "CiliumNetworkPolicy can only be applied to specific namespaces"
      anyPattern:
      - spec:
          endpointSelector:
            matchLabels:
              namespace: "allowed-namespace-1"
      - spec:
          endpointSelector:
            matchLabels:
              namespace: "allowed-namespace-2"
